# game.libretro.tyrquake

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/tyrquake/: CMakeLists.txt  tyrquake.txt
game.libretro.tyrquake/: addon.xml  addon.xml.in
game.libretro.tyrquake/resources/: settings.xml
game.libretro.tyrquake/resources/language/English/: strings.po
gameclient.tyrquake/: addon.xml
